test/conformance/chainsaw/image-validating-policies/standard/notary-configmap-cert/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notary-verify-images
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: keys
  namespace: notary-verify-images
data:
  certificate: |-
    -----BEGIN CERTIFICATE-----
    MIIDTTCCAjWgAwIBAgIJAPI+zAzn4s0xMA0GCSqGSIb3DQEBCwUAMEwxCzAJBgNV
[...]
    uOKpF5rWAruB5PCIrquamOejpXV9aQA/K2JQDuc0mcKz
    -----END CERTIFICATE-----
---
