test/conformance/chainsaw/image-validating-policies/standard/notary-configmap-cert/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-good
  namespace: notary-verify-images
  labels:
    prod: "true"
spec:
  containers:
    - name: nginx
      image: 'ghcr.io/kyverno/test-verify-image:signed'
